force-app/main/default/objects/SVMXA360__CONF_ProcessWizardStep__c/SVMXA360__CONF_ProcessWizardStep__c.object-meta.xml
<CustomObject>
    <description>Stores the settings related to Warranty Management.</description>
    <label>Process Wizard Step</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Wizard Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>