force-app/main/default/objects/SVMXA360__CONF_ProcessWizardStep__c/fields/SVMXA360__CriteriaAction__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CriteriaAction__c</fullName>
    <description>Visibility (Disable/Hide) of the wizard step based on this.</description>
    <label>Criteria Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disable Step</fullName>
            </value>
            <value>
                <fullName>Hide Step</fullName>
                <default>true</default>
                <label>Hide Step</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>