force-app/main/default/objects/SVMXA360__CONF_ProcessWizardStep__c/fields/SVMXA360__CriteriaActionHelpText__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CriteriaActionHelpText__c</fullName>
    <description>Help text to be displayed on disabled step.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Help Text to display for the Criteria Action</inlineHelpText>
    <label>Criteria Action Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>