force-app/main/default/objects/SVMXA360__CONF_ProcessWizardStep__c/fields/SVMXA360__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DeveloperName__c</fullName>
    <description>Developer name helps identify a step uniquely</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Developer name helps identify a step uniquely</inlineHelpText>
    <label>Developer Name</label>
    <length>140</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>