force-app/main/default/objects/SVMXA360__CONF_ProcessWizardStep__c/fields/SVMXA360__HelpText__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__HelpText__c</fullName>
    <description>Help text to be displayed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Help Text to display for the Step</inlineHelpText>
    <label>Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>