force-app/main/default/objects/SVMXA360__CONF_ProcessWizardStep__c/fields/SVMXA360__IconName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__IconName__c</fullName>
    <description>Stores the wizard step&apos;s icon.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IconName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>