force-app/main/default/objects/SVMXA360__CONF_ProcessWizardStep__c/fields/SVMXA360__Namespace__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Namespace__c</fullName>
    <description>Stores the namespace.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>