force-app/main/default/objects/SVMXA360__CONF_ProcessWizardStep__c/fields/SVMXA360__Open_As_Modal__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Open_As_Modal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opens the flow as Modal dialog</description>
    <inlineHelpText>if set to true, Opens the flow as Modal dialog</inlineHelpText>
    <label>Open As Modal</label>
    <type>Checkbox</type>
</CustomField>