force-app/main/default/objects/SVMXA360__CONF_ProcessWizardStep__c/fields/SVMXA360__OpenAsModal__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__OpenAsModal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to True, the targetted screen flow will be launched as modal.</description>
    <inlineHelpText>if set to true, Opens the flow as Modal dialog</inlineHelpText>
    <label>Open As Modal</label>
    <type>Checkbox</type>
</CustomField>