force-app/main/default/objects/SVMXA360__CONF_ProcessWizardStep__c/fields/SVMXA360__ProcessWizard__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProcessWizard__c</fullName>
    <description>Master record.</description>
    <label>Process Wizard</label>
    <referenceTo>SVMXA360__CONF_ProcessWizard__c</referenceTo>
    <relationshipLabel>Process Wizard Steps</relationshipLabel>
    <relationshipName>Process_Wizard_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>