force-app/main/default/objects/SVMXA360__CONF_ProcessWizardStep__c/fields/SVMXA360__Sequence__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Sequence__c</fullName>
    <description>The wizard step will be displayed based on this.</description>
    <label>Sequence</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>