force-app/main/default/objects/SVMXA360__CONF_ProcessWizardStep__c/fields/SVMXA360__StepDependencyFlag__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__StepDependencyFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores boolean value of step dependency flag</description>
    <inlineHelpText>Stores boolean value of step dependency flag</inlineHelpText>
    <label>Step Dependency Flag</label>
    <type>Checkbox</type>
</CustomField>