force-app/main/default/objects/SVMXA360__CONF_ProcessWizardStep__c/fields/SVMXA360__Target__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Target__c</fullName>
    <description>The targetted action should be performed on click of the wizard step.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Flow unique name</inlineHelpText>
    <label>Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>