force-app/main/default/objects/SVMXA360__CONF_ProcessWizardStep__c/fields/SVMXA360__Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Type__c</fullName>
    <description>The targetted action type associated with the wizard step.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>SPM Transaction</fullName>
            </value>
            <value>
                <fullName>Lightning Web Component</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>