force-app/main/default/objects/SVMXA360__CONF_ProcessWizardStep__c/fields/SVMXA360__VisibilityCriteria__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__VisibilityCriteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The visibility of the wizard decided based on this expression.</description>
    <label>Visibility Criteria</label>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Process Steps</relationshipLabel>
    <relationshipName>Process_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>